<resources>
    <string name="app_name">SCube Music Player</string>
    <string name="song_title">Song Title</string>
    <string name="song_description">Song Description</string>

    <string name="cursor_position">00:00</string>

    <string name="btn_recent">Recent</string>
    <string name="txt_recent">Recently Played</string>
    <string name="dsc_recent">Recently Played Songs</string>

    <string name="btn_favorites">Favorites</string>
    <string name="txt_favorites">My Favorites</string>
    <string name="dsc_favorites">My Favorite Songs</string>

    <string name="btn_playlist">Playlists</string>
    <string name="txt_playlist">My Playlists</string>
    <string name="dsc_playlist">Playlists of Songs</string>

    <string name="txt_songs">List of Songs</string>
    <string name="btn_back">Back to All Songs</string>
    <string name="btn_song_options">Song Options</string>
    <string name="btn_next">Next Song</string>
    <string name="btn_play">Play Song</string>
    <string name="btn_previous">Previous Song</string>
    <string name="btn_repeat">Repeat current song</string>
    <string name="btn_move">Move current song</string>
    <string name="btn_add_favorite">Add current song to my favorite playlist</string>
    <string name="btn_details">Song details</string>
    <string name="btn_share">Share current song</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation_heading">S<sup>3</sup> Music Player</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About</string>
    <string name="item_exit">Exit</string>
    <string name="item_sign_in">Sign In</string>
    <string name="btn_options">Options</string>
</resources>