<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/song_thumbnail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/song_title"
        android:src="@mipmap/s3_music_player_icon"
        android:layout_marginStart="8dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="8sp">
        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/song_title"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/song_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/song_description"
            android:textSize="14sp"
            android:singleLine="true"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/song_options"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/options_icon"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/btn_options" />
</LinearLayout>