<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.PlaylistsActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/btn_back"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_playlist"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            />

        <ImageButton
            android:id="@+id/btn_options"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:src="@drawable/options_icon"
            android:contentDescription="@string/btn_options"
            android:background="@color/background"
            android:backgroundTint="@color/background" />

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:text="@string/txt_songs"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        android:background="@color/background"
        android:backgroundTint="@color/background">

        <ImageButton
            android:id="@+id/song_thumbnail"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/song_title"
            android:foregroundTint="@color/background"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_screen"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:src="@drawable/splash_screen" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/background"
            android:backgroundTint="@color/background">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:text="@string/song_title"
                android:gravity="start|center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@color/background"
                android:backgroundTint="@color/background"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/song_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:background="@color/background"
                android:backgroundTint="@color/background"
                android:gravity="start|center_vertical"
                android:text="@string/song_title"
                android:textColor="#000000"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/btn_previous"
            android:src="@drawable/previous_small_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/btn_play"
            android:src="@drawable/play_small_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:paddingHorizontal="10dp"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/btn_next"
            android:src="@drawable/next_small_icon"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>